@@ -4,6 +4,9 @@
 # BREAK = change breaks existing code
 # BUG   = fixed a bug that was crashing
 
+Feb 12, 2001
+	workaround python parsing error for pygame.time.delay(-1)
+
 Feb 9, 2001
 	setting rectangle width/height/size changes the
 		right/bottom edges (instead of top/right) [BREAK]
